# kavalkilu

./: .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  Openhab Tips.md  Philips Hue Tips.md  README.md  __init__.py  _auto_config.sh  common.sh  config.py  config.yaml  increment_version.py  ppmgr.sh  push_changes.sh  pyproject.toml  requirements.server  requirements.tpcomp  requirements.txt  run_tests.sh  setup.cfg  setup.py  tox.ini  update_script.sh
apis/hosts/: hosts.service  hosts_api.py  hostsapi.service  start_service.sh
comm/: domoticz.py  receive_arduino.py  severe_weather_check.py
crons/: lt-barrettp.sh
daemons/: cah.py  cah.service  viktor.service
daemons/kodubot_rtm/: kodubot.service  kodubot_rtm.sh
daemons/viktor/: kodubot_rtm_attempt2.sh  viktor.service
development/: class_test.py  commute_calc.py  commute_grapher.py  estonian_translator.py  etymology_test.py  finance_read.py  general_test.py  hall_sensor.py  markov reviews.py  nws_alerts.py  pw_constructor.py
development/custom_search_engine_entry/: custom_search_engines.xml
development/slack/: big-gif-maker.py  cah_daemon.py  emoji_transfer.py  uwu.py  x_intensifies.sh
docker/: build-docker-img.sh  kavalkilu.dockerfile  run-docker-img.sh
documentation/: Server Setup and Maintenance.md
documentation/crons/: elutubaPi.sh  garagePi.sh  homeserv.sh  lt_barrettp.sh  pi-elutuba.sh  pi-garage.sh  pi-porch.sh  pi_garage.sh  pi_porch.sh  porchPi.sh  su-homeserv.sh  su-pi-elutuba.sh  su-pi-garage.sh  tpcomp.sh
kavalkilu/: __init__.py  _version.py  date.py  errors.py  homeassistant.py  influx.py  log.py  mqtt.py  net.py  path.py  sqllite.py  system.py
kavalkilu/local_tools/: __init__.py  slack_communicator.py
kavalkilu/tests/: camera_tests.py
kavalkilu/tools/: __init__.py  camera.py  databases.py  date.py  domoticz.py  errors.py  gif.py  image.py  light.py  log.py  message.py  net.py  openhab.py  path.py  r_logger.R  roku.py  secure_copy.py  security.py  selenium.py  sensors.py  slack.py  (+3 more)
reqs/: all_machines_requirements.frozen  raspi_only_requirements.frozen  server_only_requirements.frozen
scripts/: log_reader.py  machine_uptime.py  severe_weather_check.py
sensors/: amcrest_notify_zone.py  ecobee_temps.py  garage_motion.py  leak_detect_and_signal.ino  log_reader.py  log_remover.py  obd_scp.py  raspicam.py  slack_logger.py  speedtest_logger.py
setup_tools/: chromedriver_update.sh  command_line_tools.txt  dir_maker.sh  general_functions.sh  git_highlighter.sh  packaging_help.md  pi_auto_setup.sh  pi_env_setup.sh  post_update.sh  push_changes.sh  server_env_setup.sh  test.sh  update_script.sh
switches/: garage_door_remote.py
tests/: cam_notifier.py  camera_tests.py  estonian_translator.py  gmail_filter_builder.py  log_tests.py  mocks.py  network_scanner.py  test_date.py  test_errors.py  test_hass.py  test_influx.py  test_log.py  test_net.py  test_path.py  vpulse_auto.py
tools/: __init__.py  camera.py  databases.py  date.py  ecobee.py  email.py  gpio.py  light.py  log.py  message.py  openhab.py  path.py  relay.py  roku.py  sensors.py  serial.py  system.py  text.py  vb_script_logger.vbs  weather.py
(+59 files in other folders)
