[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kavalkilu"
version = '2.0.0'
description = "A library for integrating some common home automation components"
authors = ["bobrock <bobrock@tuta.io>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/barretobrock/kavalkilu'
packages = [
    { include = 'kavalkilu' },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "0.6.0"
influxdb = "^5.3.1"
numpy = "^1.22.3"
pandas = "^1.4.2"
paho-mqtt = "1.6.1"
psutil = "5.9.0"
python-dateutil = "2.8.2"
requests = ">=2.25.0"
# Optional dependencies would go down here
# example = { version = ">=1.7.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
tox = "^3.24.5"

[tool.poetry.extras]
test = ["pytest"]
